--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^3.10.1",
     "multer": "^1.0.3",
     "opencv": "^5.0.0",
+    "tracking": "^1.1.2",
     "webshot": "^0.18.0"
   }
 }
